--- a/report.qmd
+++ b/report.qmd
@@ -1,6 +1,6 @@
 ---
 title: "EV Power - Lab 4 Project Report"
-format: typst
+format: html
 ---
 
 # Example Solution 1
@@ -8,16 +8,57 @@ format: typst
 ## **Part 0: libraries**
 
 ```{r}
-
+library(tidyverse)   
+library(leaflet)
+library(sf) 
 ```
 
 ## **Part 1:** **Defining Research Question**
 
-Chosen Question:
+Chosen Question: Are electric vehicles in high-EV states actually charging with clean energy, or are they running on coal?
+
+This question directly addresses whether EVs are truly environmentally friendly by examining the energy mix used to power them. While EVs produce zero direct emissions, if they're charged using electricity generated primarily from coal - the dirtiest fossil fuel - their environmental benefit is significantly reduced. By analyzing the relationship between EV registrations and coal usage across states, we can identify which states have high EV adoption paired with low coal dependency (truly green EVs) versus states where high EV numbers coincide with high coal usage (potentially undermining the environmental benefits). This analysis directly answers the project's core question about whether the electricity used to charge EVs actually comes from clean sources.
 
 ## **Part 2: Data Preparation and Cleaning**
 
 ```{r}
+renew_2023 <- read_csv("data/renew-use-2023.csv")
+total_2023 <- read_csv("data/total-use-2023.csv")
+ev_reg <- read_csv("data/ev-registrations-by-state-2023.csv")
+
+```
+
+```{r}
+renew_clean <- renew_2023 |>
+  rename_with(tolower) |>
+  mutate(state = str_to_upper(state)) |>
+  mutate(renewable_use_2023 = str_remove_all(renewable_use_2023, " kWh| MWh")) |>
+  mutate(renewable_use_2023 = as.numeric(renewable_use_2023)) |>
+  filter(state != "US")
+
+total_clean <- total_2023 |>
+  pivot_longer(cols = -Energy_Source, 
+               names_to = "state", 
+               values_to = "usage") |>
+  mutate(state = str_to_upper(state)) |>
+  mutate(energy_source = str_to_lower(Energy_Source)) |>
+  select(state, energy_source, usage) |>
+  filter(state != "US")
+
+ev_clean <- ev_reg |>
+  slice(-1:-2) |>
+  rename(state = 1, ev_count = 2) |>
+  mutate(ev_count = str_remove_all(ev_count, "#|~|EVs| ")) |>
+  mutate(ev_count = as.numeric(ev_count)) |>
+  filter(state != "TOTAL") |>
+  mutate(state = state.abb[match(state, state.name)]) |>
+  mutate(state = ifelse(is.na(state) & grepl("Columbia", state, ignore.case = TRUE), 
+                        "DC", state))
+
+
+head(renew_clean)
+head(total_clean)
+head(ev_clean)
 
 ```
 
@@ -25,10 +66,124 @@ Chosen Question:
 
 ```{r}
 
+renewable_total <- renew_clean |>
+  group_by(state) |>
+  summarise(total_renewable = sum(renewable_use_2023, na.rm = TRUE))
+
+coal_usage <- total_clean |>
+  filter(energy_source == "coal_usage") |>
+  select(state, coal_usage = usage)
+
+total_energy <- total_clean |>
+  group_by(state) |>
+  summarise(total_energy_use = sum(usage, na.rm = TRUE))
+
+analysis_data <- renewable_total |>
+  left_join(coal_usage, by = "state") |>
+  left_join(total_energy, by = "state") |>
+  left_join(ev_clean, by = "state") |>
+  mutate(
+    renewable_pct = (total_renewable / total_energy_use) * 100,
+    coal_pct = (coal_usage / total_energy_use) * 100
+  ) |>
+  mutate(state_full = tolower(state.name[match(state, state.abb)])) |>
+  mutate(state_full = ifelse(state == "DC", "district of columbia", state_full))
+
+head(analysis_data)
+
+summary(analysis_data[c("coal_pct", "renewable_pct", "ev_count")])
 ```
 
 ## **Part 4: Mapping Visualization**
 
 ```{r}
 
+us_states <- map_data("state")
+
+map_data <- us_states %>%
+  left_join(analysis_data, by = c("region" = "state_full"))
+
+head(map_data)
+
+ggplot(map_data, aes(x = long, y = lat, group = group)) +
+  geom_polygon(aes(fill = coal_pct), color = "white", linewidth = 0.2) +
+  scale_fill_viridis_c(name = "Coal %") +
+  coord_fixed(1.3) +
+  theme_void() +
+  labs(title = "Coal Usage as Percentage of Total Energy by State (2023)")
 ```
+
+```{r}
+ggplot(map_data, aes(x = long, y = lat, group = group)) +
+  geom_polygon(aes(fill = ev_count), color = "white", linewidth = 0.2) +
+  scale_fill_viridis_c(
+    name = "EV Count",
+    option = "plasma",
+    trans = "log10",
+    labels = scales::comma
+  ) +
+  coord_fixed(1.3) +
+  theme_void() +
+  labs(title = "Electric Vehicle Registrations by State (2023)",
+       subtitle = "Log scale used due to California's high numbers")
+```
+
+```{r}
+ggplot(map_data, aes(x = long, y = lat, group = group)) +
+  geom_polygon(aes(fill = renewable_pct), color = "white", linewidth = 0.2) +
+  scale_fill_viridis_c(
+    name = "Renewable %",
+    option = "viridis"
+  ) +
+  coord_fixed(1.3) +
+  theme_void() +
+  labs(title = "Renewable Energy as Percentage of Total Energy (2023)",
+       subtitle = "Percentage of total energy from renewable sources")
+```
+
+```{r}
+
+us_states_sf <- st_as_sf(maps::map("state", plot = FALSE, fill = TRUE))
+
+us_states_sf <- us_states_sf |>
+  mutate(state_full = str_replace_all(ID, ":main", "")) |>
+  left_join(analysis_data, by = "state_full")
+
+leaflet(us_states_sf) |>
+  addProviderTiles(providers$CartoDB.Positron) |>
+  addPolygons(
+    fillColor = ~colorNumeric("YlOrRd", coal_pct)(coal_pct),
+    fillOpacity = 0.7,
+    color = "white",
+    weight = 1,
+    label = ~paste0(
+      state, "<br/>",
+      "Coal: ", round(coal_pct, 1), "%<br/>",
+      "EVs: ", scales::comma(ev_count)
+    ) |> lapply(htmltools::HTML),
+    highlightOptions = highlightOptions(
+      weight = 3,
+      color = "#666",
+      fillOpacity = 0.9
+    )
+  ) |>
+  addLegend(
+    position = "bottomright",
+    pal = colorNumeric("YlOrRd", us_states_sf$coal_pct),
+    values = ~coal_pct,
+    title = "Coal %",
+    opacity = 0.7
+  )
+```
+
+## **Part 5: Analysis and Interpretation**
+
+Our analysis reveals important patterns regarding the environmental impact of electric vehicles across different states. By examining the relationship between EV adoption and energy sources, we found significant variation in how "clean" EVs actually are depending on location.
+
+States with High Coal Dependency: West Virginia and Wyoming show coal usage exceeding 50% of total energy, meaning EVs in these states are primarily powered by one of the dirtiest energy sources. This raises questions about whether EV adoption in these regions truly reduces emissions.
+
+Clean EV States: California, despite having the highest EV count (1.2+ million vehicles), maintains relatively low coal usage (\~0.4%), suggesting that EVs in this state are indeed contributing to emission reductions. Washington and Oregon also show favorable combinations of high renewable energy and low coal dependency.
+
+The Greenwashing Problem: Several states with moderate EV adoption show surprisingly high coal dependency, indicating that the environmental benefits of EVs are not uniform across the country. This directly answers our main research question: electric vehicles do not always run on clean energy - it depends heavily on the state's energy mix.
+
+Conclusion: Whether an EV is truly "green" depends not just on the vehicle itself, but on where it's being charged. States investing in renewable energy infrastructure are seeing genuine environmental benefits from EV adoption, while others may be overstating their climate impact.
